# jdi

./: CMakeLists.txt  README.md
include/: jdi_engine.hpp  jdi_grid.hpp  jdi_widget.hpp
src/: jdi.hpp  jdi_color.hpp  jdi_deleter.cpp  jdi_engine.cpp  jdi_engine.hpp  jdi_error.cpp  jdi_grid.cpp  jdi_sprite.cpp  jdi_sprite.hpp  jdi_text.cpp  jdi_text.hpp  jdi_widget.cpp  jdi_widget.hpp
src/test/: engine_test.cpp
